--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,7 +43,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contato</a>
           </li>
-          <button class="btn">Cadastre-se</button>
+          <a class=" nav-link btn" href="/views/create_accont/create_account.html">Cadastre-se</a>
         </ul>
       </div>
     </nav>
@@ -226,5 +226,6 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
   </script>
+  <script src="js/script.js"></script>
 </body>
 </html>
